--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 	box-sizing: border-box;
 }
 
-body, div, section, nav, ul, img, h1, h2, h3, p, a, span {
+body, div, section, nav, ul, img, h1, h2, h3, p, a, span, figure {
 	margin: 0;
 	padding: 0;
 	text-decoration: none;
@@ -185,7 +185,7 @@ nav > ul li {
 
 /** parking **/
 
-.parking, .form-data {
+.parking, .form-data, .reference {
 	box-shadow: inset 0px .2px 1px rgba(0,0,0,.4);
 	padding: 20px 0;
 }
@@ -254,7 +254,7 @@ label {
 	padding: 15px 10px;
 	font-size: 1em;
 	box-shadow: inset 1px 1px 3px 1px rgba(0,0,0,.6);
-	border-radius: 7px;
+	border-radius: 4px;
 }
 
 .form-data [type="submit"] {
@@ -262,8 +262,19 @@ label {
 	width: 100%;
 	padding: 15px 10px;
 	font-size: 1.3em;
+	border-radius: 2px;
 }
 
+/*** reference ***/
+
+figure {
+	width:80%;
+	margin: 20px auto;
+}
+
+figure img{
+	border-radius: 10px;
+}
 
 /*** PSUEDO-CLASSES ***/
 
@@ -316,7 +327,7 @@ nav > ul li:hover {
 	color: white;
  }
 
- .lectures {
+ .lectures, .reference {
  	background-color: rgb(240,240,240);
  }
 
@@ -326,8 +337,15 @@ nav > ul li:hover {
 
  .parking {
  	background-color: rgba(148, 149, 135, .3);
- 	color: rgb(69, 69, 69);
  }
+
+ .parking-main p > span {
+	color: rgba(69, 69, 69, .7);
+}
+
+ .parking, .reference {
+	color: rgb(69, 69, 69);
+}
 
  .form-data {
 	background-color: rgb(149, 150, 136);
@@ -347,5 +365,5 @@ nav > ul li:hover {
  }
 
  .form-data [type="submit"] {
- 	background-color: #4d4d4d;
+ 	background-color: rgb(77, 77, 77);
  }
