--- a/css/style.css
+++ b/css/style.css
@@ -177,7 +177,7 @@ h4 + hr {
 }
 
 .lectures-head p {
-	background: url('../img/clock.png') left no-repeat;
+	background: url('../img/icons/clock.png') left no-repeat;
 	background-size: 20px 20px;
 	padding-left: 25px;
 	font-weight: bold;
@@ -221,7 +221,7 @@ h4 + hr {
 /** parking **/
 
 .location {
-	background: url(../img/road.png) left no-repeat;
+	background: url(../img/icons/road.png) left no-repeat;
 	background-size: 20px;
 	padding-left: 25px;
 }
