--- a/css/media-querries.css
+++ b/css/media-querries.css
@@ -1,4 +1,4 @@
-/** iphone 6 **/
+/** iphone 6 portrait**/
 @media screen and (min-width: 375px) {
 	
 	.parking-head h2, .form-data h2 {
@@ -91,7 +91,7 @@
 	}
 
 	.info p {
-		font-size: 1.07em;
+		font-size: 1.1em;
 	}
 
 	/** parking **/
@@ -161,7 +161,7 @@
 	}
 
 	.info .par {
-		font-size: .8em;
+		font-size: 1em;
 	}
 
 	.lectures > .main-wrapper {
@@ -187,6 +187,10 @@
 	
 	.lectures-head h2 {
 		font-size: 2.7em;
+	}
+
+	.info .par {
+		font-size: 1em;
 	}
 	.robot {
 		width: 200px
