--- a/css/style.css
+++ b/css/style.css
@@ -189,7 +189,6 @@ h4 + hr {
 .container img {
 	display: block;
 	border-radius: 10px 10px 0 0;
-	width: 80%;
 	margin: 0 auto;
 }
 
@@ -355,35 +354,35 @@ figcaption p {
 
 .back-top {
 	width: 40px;
+	animation: pulse 1.5s infinite;
 }
 
 /** absolute images **/
 
 .robot, .robot-car{
 	position: absolute;
-	animation: jump 1.5s infinite;
 }
 
 .robot {
-	width: 70px;
+	width: 90px;
 	right: 10px;
 	bottom: 0;
 	z-index: -1;
 }
 
 .robot-car {
-	width: 70px;
+	width: 80px;
 	right: 5px;
 	bottom: -5px;
 }
 
 /** keyframes **/
 
-@keyframes jump {
-	0% { transform: translateY(0) }
-	20% { transform: translateY(-10px) }
-	50% { transform: translateY(0) }
-	100% { transform: translateY(0) }
+@keyframes pulse {
+	0% { transform: scale(1) }
+	20% { transform: scale(1.05) }
+	50% { transform: scale(1) }
+	100% { transform: scale(1) }
 }
 
 
